// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`radio button group should render disabled radio buttons 1`] = `
<div>
  <div
    class="form-group  "
  >
    <label
      class="col-md-2 control-label"
    >
      RadioButtonGroupLabel
    </label>
    <div
      class="col-md-6"
    >
      <div
        class="pf-v6-c-radio"
      >
        <input
          aria-invalid="false"
          class="pf-v6-c-radio__input"
          data-ouia-component-id="OUIA-Generated-Radio-3"
          data-ouia-component-type="PF6/Radio"
          data-ouia-safe="true"
          disabled=""
          id="radio-A"
          name="RadioButtonGroupTest"
          type="radio"
          value="A"
        />
        <label
          class="pf-v6-c-radio__label pf-m-disabled"
          for="radio-A"
        >
          A
        </label>
      </div>
      <div
        class="pf-v6-c-radio"
      >
        <input
          aria-invalid="false"
          class="pf-v6-c-radio__input"
          data-ouia-component-id="OUIA-Generated-Radio-4"
          data-ouia-component-type="PF6/Radio"
          data-ouia-safe="true"
          disabled=""
          id="radio-B"
          name="RadioButtonGroupTest"
          type="radio"
          value="B"
        />
        <label
          class="pf-v6-c-radio__label pf-m-disabled"
          for="radio-B"
        >
          B
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`radio button group should render group of radio buttons 1`] = `
<div>
  <div
    class="form-group  "
  >
    <label
      class="col-md-2 control-label"
    >
      RadioButtonGroupLabel
    </label>
    <div
      class="col-md-6"
    >
      <div
        class="pf-v6-c-radio"
      >
        <input
          aria-invalid="false"
          class="pf-v6-c-radio__input"
          data-ouia-component-id="OUIA-Generated-Radio-1"
          data-ouia-component-type="PF6/Radio"
          data-ouia-safe="true"
          id="radio-A"
          name="RadioButtonGroupTest"
          type="radio"
          value="A"
        />
        <label
          class="pf-v6-c-radio__label"
          for="radio-A"
        >
          A
        </label>
      </div>
      <div
        class="pf-v6-c-radio"
      >
        <input
          aria-invalid="false"
          class="pf-v6-c-radio__input"
          data-ouia-component-id="OUIA-Generated-Radio-2"
          data-ouia-component-type="PF6/Radio"
          data-ouia-safe="true"
          id="radio-B"
          name="RadioButtonGroupTest"
          type="radio"
          value="B"
        />
        <label
          class="pf-v6-c-radio__label"
          for="radio-B"
        >
          B
        </label>
      </div>
    </div>
  </div>
</div>
`;
